# rentomatic

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  alembic.ini  cli.py  initial_mongo_setup.py  initial_postgres_setup.py  manage.py  punch_config.py  punch_version.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  wsgi.py
.github/: ISSUE_TEMPLATE.md
application/: app.py  config.py
application/rest/: room.py
config/: production.json  testing.json
docker/: production.yml  testing.yml
docker/nginx/: nginx.conf
docker/web/: Dockerfile.production
docs/: conf.py  index.rst  installation.rst  usage.rst
domain/: room.py
migrations/: env.py
migrations/versions/: 4d4c19952a36_initial.py
rentomatic/: __init__.py  app.py  flask_settings.py  responses.py
rentomatic/domain/: room.py
rentomatic/repository/: memrepo.py  mongorepo.py  postgres_objects.py  postgresrepo.py
rentomatic/request_objects/: room_list_request_object.py
rentomatic/requests/: room_list.py
rentomatic/response_objects/: response_objects.py
rentomatic/rest/: room.py
rentomatic/serializers/: room.py  room_json_serializer.py
rentomatic/use_cases/: room_list.py  room_list_use_case.py
requirements/: dev.txt  prod.txt  test.txt
src/: .env  cli.py  main.py
src/application/: config.py
src/repositories/: memrepo.py
src/serializers/: room.py
tests/: conftest.py  test_responses.py
tests/domain/: test_room.py
tests/repositories/: test_memrepo.py
tests/repository/: test_memrepo.py
(+16 files in other folders)
